# KentDAW

./: .gitignore  README.md
KentDAW/Source/: ArrangeWindow.cpp  ArrangeWindow.h  BinaryData.h  CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h  Mixer.cpp  Mixer.h  Transport.cpp  Transport.h  TransportComponent.cpp  TransportComponent.h
KentDAW/Source/AudioEngine/: ArrangeAudioRegions.cpp  ArrangeAudioRegions.h  AudioEngine.cpp  AudioEngine.h
KentDAW/Source/ExternalClasses/: ejuce_ComponentEffects.h  ejuce_TimelineSystem.cpp  ejuce_TimelineSystem.h  juce_PositionableResamplingAudioSource.cpp  juce_PositionableResamplingAudioSource.h
KentDAW/Source/core/: AudioEngine.cpp  AudioEngine.h  AudioMixer.cpp  AudioMixer.h  AudioMixer2.cpp  AudioMixer2.h  AudioRegion.cpp  AudioRegion.h  AudioRegionFactory.cpp  AudioRegionFactory.h  AudioSourceProcessor.cpp  AudioSourceProcessor.h  AudioTrack.cpp  AudioTrack.h  AudioTrackFactory.cpp  AudioTrackFactory.h  ChannelStripProcessor.cpp  ChannelStripProcessor.h  EQProcessor.cpp  EQProcessor.h  FileManager.cpp  FileManager.h  GainProcessor.cpp  GainProcessor.h  MasterTrack.cpp  MasterTrack.h  MidiManager.cpp  MidiManager.h  Mixer.cpp  Mixer.h  Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h  Region.h  RegionMixer.cpp  RegionMixer.h  RoutingAudioSource.cpp  RoutingAudioSource.h  SampleAudioRegion.cpp  (+5 more)
KentDAW/Source/ui/: ArrangeWindow.cpp  ArrangeWindow.h  BinaryData.cpp  BinaryData.h  ChannelStripComponent.cpp  ChannelStripComponent.h  LeftSidebar.cpp  LeftSidebar.h  MainComponent.cpp  MainComponent.h  (+16 more)
(+90 files in other folders)
